# iris-devtester

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  EXTRACTION_SUMMARY.md  GETTING_STARTED.md  MANIFEST.in  PROGRESS.md  PYPI_READINESS.md  README.md  REPRODUCE_MACOS_BUG.md  ROADMAP.md  SECURITY.md  SESSION-INTEGRATION-TESTS.md  SESSION-SUMMARY.md  SKILL.md  STATUS-002-PIVOTED.md  STATUS.md  V1_COMPLETION_PLAN.md  V1_RELEASE_SUMMARY.md  debug_task_schema.py  diagnose_port_registry_timing.py  diagnose_testcontainers.py  diagnose_with_port_registry.py  pyproject.toml  reproduce_macos_password_bug.py  skill.md  test_langchain_integration.py  test_password_reset_fix.py  test_task_fields.py  test_task_insert.py  verify_password_set.py
.claude/commands/: connection.md  container.md  fixture.md  troubleshooting.md
.cursor/rules/: iris-connection.mdc  iris-container.mdc  iris-fixtures.mdc  iris-troubleshooting.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.specify/: feature-003-plan.md  feature-request.md
docs/: GETTING_STARTED.md  IMPACT_ANALYSIS.md  PHASE_2_PLAN.md  RAG_TEMPLATES_ANALYSIS.md  SQL_VS_OBJECTSCRIPT.md  TROUBLESHOOTING.md  WHATS_NEW_v1.4.0.md
docs/development/: EXTRACTION_SUMMARY.md  PHASE2_RESULTS.md  STATUS-003-COMPLETE.md  V1_COMPLETION_PLAN.md
docs/examples/: sql_vs_objectscript_examples.py
docs/features/: WSGI-ASGI-SERVER-SETUP.md  agent-skills.md  dat-fixtures.md  docker-compose.md  performance-monitoring.md  testcontainers.md
docs/learnings/: callin-service-requirement.md  cpf-merge-and-container-restarts.md  dat-fixtures-docker-exec-pattern.md  dat-restore-database-isolation-problem.md  dbapi-bulk-insert-performance-issue.md  dbapi-objectscript-limitation.md  dbapi-password-reset-limitation.md  embedded-python-considerations.md  feature-002-pivot-summary.md  integration-test-dbapi-limitation.md  iris-container-readiness.md  password-reset-changeflag-fix.md  rag-templates-production-patterns.md  sql-task-manager-operations.md
examples/: 01_quickstart.py  02_connection_management.py  04_pytest_fixtures.py  05_ci_cd.py  08_auto_discovery.py  09_enterprise.py  README.md  demo-workflow.sh  iris-config-community.yml  iris-config-enterprise.yml
iris_devtester/: __init__.py
iris_devtester/cli/: __init__.py  container.py  container_commands.py  fixture_commands.py
iris_devtester/connections/: __init__.py  jdbc.py
iris_devtester/containers/: iris_container.py  wait_strategies.py
iris_devtester/fixtures/: creator.py  loader.py
iris_devtester/ports/: registry.py
iris_devtester/testing/: __init__.py  fixtures.py  schema_reset.py
iris_devtester/utils/: container_status.py  dbapi_compat.py  enable_callin.py  password_reset.py  password_verification.py  test_connection.py
iris_devtools/: __init__.py
iris_devtools/cli/: __init__.py  fixture_commands.py
iris_devtools/config/: __init__.py  discovery.py
iris_devtools/connections/: __init__.py  auto_discovery.py  connection.py  dbapi.py  jdbc.py  manager.py  retry.py
iris_devtools/containers/: __init__.py  iris_container.py  monitoring.py  performance.py  wait_strategies.py
iris_devtools/fixtures/: __init__.py  creator.py  loader.py  pytest_plugin.py  validator.py
iris_devtools/testing/: __init__.py  models.py  schema_reset.py
iris_devtools/utils/: __init__.py  password_reset.py  (+1 more)
tests/: __init__.py  conftest.py
(+155 files in other folders)
