[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-devtools"
version = "0.1.0"
description = "Battle-tested InterSystems IRIS infrastructure utilities for Python development"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "intersystems",
    "iris",
    "database",
    "testing",
    "testcontainers",
    "docker",
    "devtools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]

dependencies = [
    "testcontainers>=4.0.0",
    "testcontainers-iris-python>=1.2.2",
    "python-dotenv>=1.0.0",
    "docker>=6.0.0",
]

[project.optional-dependencies]
# DBAPI support (recommended)
dbapi = [
    "intersystems-irispython>=3.2.0",
]

# JDBC support (fallback)
jdbc = [
    "jaydebeapi>=1.2.3",
    "JPype1>=1.4.0",
]

# Full installation (all connection types)
all = [
    "intersystems-irispython>=3.2.0",
    "jaydebeapi>=1.2.3",
    "JPype1>=1.4.0",
]

# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
]

# Development dependencies
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pre-commit>=3.6.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/iris-devtools"
Documentation = "https://iris-devtools.readthedocs.io"
Repository = "https://github.com/yourusername/iris-devtools"
Issues = "https://github.com/yourusername/iris-devtools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["iris_devtools*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=iris_devtools",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring IRIS",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["iris_devtools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
